feat: adiciona mais lógica e testes unitários
