# backend/swagger/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.1.0
 info:
   title: Vehicle Registration API
   description: >-
@@ -110,15 +110,28 @@ paths:
       tags:
         - Veículos
       operationId: findAll
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 0
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 10
       responses:
         '200':
           description: OK
           content:
             '*/*':
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Veiculo'
+                $ref: '#/components/schemas/PageVeiculo'
     post:
       tags:
         - Veículos
@@ -194,11 +207,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Veiculo'
-  /veiculos/distribuicao-marca:
+  /veiculos/distribuicao-fabricante:
     get:
       tags:
         - Veículos
-      operationId: countByMarca
+      operationId: countByFabricante
       responses:
         '200':
           description: OK
@@ -207,9 +220,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: array
-                  items:
-                    type: object
+                  type: string
   /veiculos/distribuicao-decada:
     get:
       tags:
@@ -223,9 +234,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: array
-                  items:
-                    type: object
+                  type: string
 components:
   schemas:
     Veiculo:
@@ -251,6 +260,70 @@ components:
         updated:
           type: string
           format: date-time
+      required:
+        - ano
+        - marca
+        - veiculo
+        - vendido
+    PageVeiculo:
+      type: object
+      properties:
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+          format: int32
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/Veiculo'
+        number:
+          type: integer
+          format: int32
+        sort:
+          $ref: '#/components/schemas/SortObject'
+        numberOfElements:
+          type: integer
+          format: int32
+        pageable:
+          $ref: '#/components/schemas/PageableObject'
+        first:
+          type: boolean
+        last:
+          type: boolean
+        empty:
+          type: boolean
+    PageableObject:
+      type: object
+      properties:
+        offset:
+          type: integer
+          format: int64
+        sort:
+          $ref: '#/components/schemas/SortObject'
+        unpaged:
+          type: boolean
+        paged:
+          type: boolean
+        pageSize:
+          type: integer
+          format: int32
+        pageNumber:
+          type: integer
+          format: int32
+    SortObject:
+      type: object
+      properties:
+        empty:
+          type: boolean
+        unsorted:
+          type: boolean
+        sorted:
+          type: boolean
   securitySchemes:
     bearerAuth:
       type: http
